--- a/JS-ScratchPad/scratchpad.html
+++ b/JS-ScratchPad/scratchpad.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-
+	<!--
+	A fun little JS scratchpad
+	because eval is not always evil.
+	-->
 	<head>
 	
 		<title>ScratchPad</title>
