--- a/JS-ScratchPad/scratchpad.html
+++ b/JS-ScratchPad/scratchpad.html
@@ -61,9 +61,13 @@
 				return document.getElementById('scratchpad-log');
 			}
 		
-			function log(text) {
+			function print(text) {
 				var scratchpadLog = getScratchPadLog();
 				scratchpadLog.value += text + '\r\n';
+			}
+			
+			function println(text) {
+				print(text + '\r\n');
 			}
 		
 			function ready() {
@@ -74,7 +78,7 @@
 						getScratchPadLog().value = ''; // clear the log
 						eval(input);
 					} catch (err) {
-						log(err.message);
+						println(err.message);
 					}
 				}
 			}
@@ -91,7 +95,7 @@
 			<button id="btn-clickme">Execute JavaScript</button>
 		</div>
 		<div id="output-container">
-			<label>Log <textarea id="scratchpad-log" placeholder="Use the log(string) function to write output here..."></textarea></label>
+			<label>Log <textarea id="scratchpad-log" placeholder="Use the print(String) or println(String) functions to write output here..."></textarea></label>
 		</div>
 	</body>
 	
