--- a/JS-ScratchPad/scratchpad.html
+++ b/JS-ScratchPad/scratchpad.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<!--
-	A fun little JS scratchpad
+	A fun (and minimal) JS scratchpad
 	because eval is not always evil.
 	-->
 	<head>
